refactor: update validation methods in DatabaseRequest and improve healthcheck command in docker-compose